<resources>
    <string name="app_name_real" translatable="false">File Share</string>

    <!-- General purpose -->
    <string name="gen_button_ok">OK</string>
    <string name="gen_button_yes">YES</string>
    <string name="gen_button_no">NO</string>
    <string name="gen_button_cancel">Cancel</string>
    <string name="gen_button_finish">Finish</string>
    <string name="gen_warning_dialog_title">Warning</string>

    <!-- Activity Welcome Screen -->
    <string name="aws_pick_avatar">Pick an avatar:</string>
    <string name="aws_username">Username:</string>
    <string name="aws_input_username" translatable="false"></string>
    <string name="aws_input_username_hint">Type a username</string>
    <string name="aws_gdrp">Show personalized ads</string>
    <string name="aws_unlock_ads">Hide Ads</string>
    <string name="aws_button_help">Help</string>
    <string name="aws_button_privacy">Privacy Policy</string>
    <string name="aws_button_go">Go</string>
    <string name="aws_button_request_notification_permission">Allow notifications</string>
    <string name="aws_button_save">Save Changes</string>
    <string name="aws_keyboard_ime_action">Done</string>
    <string name="aws_username_digits" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>

    <!-- Dialog Activity Welcome Screen -->
    <string name="aws_dialog_title">Warning!</string>
    <string name="aws_dialog_username">Please type a valid username</string>
    <string name="aws_dialog_avatar">Please pick an avatar</string>

    <!-- Activity Main menu -->
    <string name="mm_send">Send Files</string>
    <string name="mm_receive">Receive Files</string>
    <string name="mm_send_des">Send Files</string>
    <string name="mm_receive_des">Receive Files</string>

    <!-- Options -->
    <string name="menu_options_title">Settings</string>

    <!-- Activity file browser -->
    <string name="fb_file_name_placeholder" translatable="false">testFile.jpg</string>
    <string name="fb_file_size_placeholder" translatable="false">6 MB</string>
    <string name="fb_path" translatable="false">/</string>
    <string name="fb_icon_description">File icon</string>
    <string name="fb_button_review_queue">Back to Queue</string>
    <string name="fb_path_description">The filepath</string>
    <string name="fb_incompatible_file">No available apps to open this file</string>
    <string name="fb_dialog_android_11_saf_limitations">Android 11 limits the number of files you can add to the queue. If you add over 512 files to the queue, only the 1st 512 will be transferred.</string>
    <string name="fb_select_all_text">Select All</string>
    <string name="fb_deselect_all_text">Deselect All</string>
    <string name="fb_notification_permission">Notification access needed to begin file transfer.</string>
    <string name="fb_notification_permission_warning">Notification access denied multiple times. Remediate via Android privacy settings.</string>

    <!-- Activity file queue -->
    <string name="fq_tv_title_queue">Files to be sent:</string>
    <string name="fq_iv_delete_description">Remove from queue</string>
    <string name="fq_iv_empty_queue">The queue is empty</string>
    <string name="fq_tv_empty_queue">Sharing queue is empty</string>
    <string name="fb_button_send_files">Send Files</string>
    <string name="fq_pick_files">Pick Files</string>

    <!--Activity pick user to send -->
    <string name="pu_avatar_description">User avatar</string>
    <string name="pu_username_description">Username</string>
    <string name="pu_instructions">Tap receive on the destination device</string>
    <string name="pu_error_connect_dialog">Cannot connect to the user. Try again.</string>
    <string name="pu_message_initializing_connection">Initializing server...</string>
    <string name="pu_message_connection_error">Error: Could not connect to socket</string>
    <string name="pu_message_discovery_error">Could not start service, please check your connection and try again.</string>
    <string name="pu_wifi_disabled">"Activate WiFi and try again."</string>

    <!--Activity wait user receive -->
    <string name="ru_message_initializing_connection">Initializing connection...</string>
    <string name="ru_avatar_description">Wait for the sender to connect</string>
    <string name="ru_tv_please_wait">Waiting for sender connection...</string>
    <string name="ru_message_connection_error">Could not start service, please check your connection and try again.</string>
    <string name="ru_tv_username">Username</string>
    <string name="ru_wifi_disabled">"Activate WiFi and try again."</string>
    <string name="ru_version">Version</string>
    <string name="ru_toast_pick_destination">Pick a destination folder for your files</string>

    <!--Activity transfer progress-->
    <string name="atp_tv_filename">Filename</string>
    <string name="atp_tv_out_of" translatable="false">1 of 1</string>
    <string name="atp_tv__number_connector">of</string>
    <string name="atp_tv_percentage" translatable="false">100%</string>
    <string name="atp_tv_files_in_queue">Files to be sent:</string>
    <string name="ats_tv_sent_files">Files sent</string>
    <string name="ats_tv_received_files">Files received:</string>
    <string name="ats_tv_error">Files:</string>
    <string name="ats_try_again_dialog">Cannot connect to device. Try again?</string>
    <string name="ats_cancel_warning">Are you sure you want to cancel?</string>

    <!-- Service -->
    <string name="service_notification_text_initialize">Starting transfer...</string>
    <string name="service_notification_action_stop_service">Stop</string>
    <string name="service_finished_transfer">File transfer has been completed.</string>
    <string name="service_socket_error">There was a connection error. Please try again.</string>
    <string name="service_out_of_space_error">The receiver device ran out of space and the transfer cannot continue.</string>
    <string name="service_success">Success!</string>

    <!-- Widget -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_tv_title" translatable="false">File Share</string>
    <string name="widget_tv_lifetime">Lifetime transfers</string>
    <string name="widget_tv_number" translatable="false">0</string>
    <string name="widget_tv_of">1 of 1</string>
    <string name="widget_tv_of_description">Progress by file number</string>
    <string name="widget_tv_filename">File to be transferred</string>
    <string name="widget_tv_currently">Transferring...</string>
</resources>