<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aws_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ToolbarWhite"
            app:popupTheme="@style/ToolbarOptionsMenu"/>
    </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                tools:context=".WelcomeScreenActivity">

                <ImageView
                    android:id="@+id/image_aws_logo"
                    android:layout_width="@dimen/welcome_icon_size"
                    android:layout_height="@dimen/welcome_icon_size"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_white" />

                <LinearLayout
                    android:id="@+id/aws_layout_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:layout_marginRight="@dimen/default_padding"
                    android:background="@color/colorCardWhite"
                    android:contentDescription="@string/app_name"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_aws_logo">

                    <TextView
                        android:id="@+id/tv_aws_pick_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_padding"
                        android:text="@string/aws_pick_avatar"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_aws_avatars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_padding">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tv_aws_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_padding"
                        android:text="@string/aws_username"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_aws_input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_padding"
                        android:digits="@string/aws_username_digits"
                        android:ems="10"
                        android:hint="@string/aws_input_username_hint"
                        android:imeActionLabel="@string/aws_keyboard_ime_action"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/aws_input_username"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_padding"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginTop="@dimen/default_padding"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:layout_marginRight="@dimen/default_padding"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/aws_layout_container">

                    <Button
                        android:id="@+id/button_go"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:contentDescription="@string/aws_button_go"
                        android:text="@string/aws_button_go" />

                    <Button
                        android:id="@+id/button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/default_padding"
                        android:layout_marginLeft="@dimen/default_padding"
                        android:contentDescription="@string/gen_button_cancel"
                        android:text="@string/gen_button_cancel" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</LinearLayout>