<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWidgetBackground"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:id="@+id/widget_default_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWidgetBackground">

        <RelativeLayout
            android:id="@+id/ly_widget_text_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_widget_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:contentDescription="@string/widget_tv_title"
                android:text="@string/widget_tv_title"
                android:textColor="@color/colorWidgetText" />

            <TextView
                android:id="@+id/tv_widget_transfers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:contentDescription="@string/widget_tv_lifetime"
                android:text="@string/widget_tv_lifetime"
                android:textColor="@color/colorWidgetText" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_widget_total_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:contentDescription="@string/widget_tv_number"
                android:text="@string/widget_tv_number"
                android:textColor="@color/colorWidgetText"
                android:textSize="@dimen/widget_big_text"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/widget_transfer_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/default_padding"
        android:background="@color/colorWidgetBackground">
        <TextView
            android:id="@+id/tv_widget_number_of_transfers"
            android:text="@string/widget_tv_of"
            android:contentDescription="@string/widget_tv_of_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorWidgetText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_widget_title_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:contentDescription="@string/widget_tv_title"
                android:text="@string/widget_tv_title"
                android:textColor="@color/colorWidgetText" />
            <TextView
                android:id="@+id/tv_widget_current_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:contentDescription="@string/widget_tv_filename"
                android:text="@string/widget_tv_filename"
                android:textColor="@color/colorWidgetText" />

            <ProgressBar
                android:id="@+id/pb_widget_progress"
                style="@style/AppThemeProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:progress="20"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>